vrodiy tayyor emas

--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -1,6 +1,6 @@
 THIS_FIELD_CANNOT_BE_NULL = "Kiritilgan maydon bo'sh bo'lishi mumkin emas!"
 SHOULD_NOT_BE_EMPTY = Kiritilgan ma'lumot bo'sh bo'lishi mumkin emas :|
-USER_ALREADY_REGISTERED = Ushbu email bilan allaqachon ro'yxatdan o'tilgan :(
+USER_ALREADY_REGISTERED = Ushbu username bilan allaqachon ro'yxatdan o'tilgan :(
 ROLE_NOT_FOUND = Bunday role topilmadi :(
 NO_CONTENT = Content mavjud emas :(
 USERNAME_NOT_FOUND = Username topilmadi:(
@@ -12,5 +12,4 @@ OTP_FOR_VERIFICATION_EMAIL = Assalomu alaykum! Emailingizni tekshirish uchun bir
 SENDING_OTP_SUCCESSFUL = Bir martalik parol tegishli emailga muvaffaqiyatli yuborildi :)
 BAD_CREDENTIALS_EXCEPTION = Username yoki parol noto'g'ri. Iltimos tekshirib qayta o'rinib ko'ring!
 EXPIRED_TOKEN = Afsuski token eskirgan:(
-
-
+PHONE_NUMBER_ALREADY_USED = Ushbu telefon raqami allaqachon foydalanilgan :(
