--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=crm-eco-system
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
+spring.datasource.username=postgres
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+
+spring.sql.init.mode=always
