--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -15,3 +15,4 @@ EXPIRED_TOKEN = Afsuski token eskirgan:(
 PHONE_NUMBER_ALREADY_USED = Ushbu telefon raqami allaqachon foydalanilgan :(
 NULL_USERNAME_FROM_TOKEN = Access tokendan kelgan username null
 INVALID_TOKEN = Token yaroqsiz :(
+FORBIDDEN = permissionga bu apiga kirish uchun ruxsat yoq
