--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=crm-eco-system
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecosysteam
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=1407
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
