--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 spring.application.name=crm-eco-system
 
 
@@ -6,8 +6,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
 spring.datasource.username=postgres
 spring.datasource.password=root123
 
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 
