--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8080
 spring.application.name=crm-eco-system
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecosysteam
 spring.datasource.username=postgres
-spring.datasource.password=root123
+spring.datasource.password=1407
 
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
