--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -16,3 +16,4 @@ PHONE_NUMBER_ALREADY_USED = Ushbu telefon raqami allaqachon foydalanilgan :(
 NULL_USERNAME_FROM_TOKEN = Access tokendan kelgan username null
 INVALID_TOKEN = Token yaroqsiz :(
 FORBIDDEN = permissionga bu apiga kirish uchun ruxsat yoq
+NOTIFICATION_NOT_FOUND = Notification topilmadi;
