--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -17,3 +17,5 @@ NULL_USERNAME_FROM_TOKEN = Access tokendan kelgan username null
 INVALID_TOKEN = Token yaroqsiz :(
 FORBIDDEN = permissionga bu apiga kirish uchun ruxsat yoq
 NOTIFICATION_NOT_FOUND = Notification topilmadi;
+GROUP_NOT_FOUND = "Bu ID bilan group topilmadi"
+PROJECT_NOT_FOUND = Bu ID bilan bron project topilmadi
