update balance service code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.application.name=crm-eco-system
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecosysteam
 spring.datasource.username=postgres
 spring.datasource.password=root123
 
