--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=8080
+server.port=8081
 spring.application.name=crm-eco-system
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=root123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
