--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=crm-eco-system
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
 spring.datasource.username=postgres
-spring.datasource.password=root123
+spring.datasource.password=12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
