--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
+server.port=8081
 spring.application.name=crm-eco-system
-spring.datasource.url=jdbc:postgresql://localhost:5432/crm_ecosystem
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
 spring.datasource.username=postgres
-spring.datasource.password=Root123
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=never
