--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>org.springframework.ai</groupId>-->
